Fix: overflow-x

--- a/html/Floma/public/css/style.css
+++ b/html/Floma/public/css/style.css
@@ -3,9 +3,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap");
 
 * {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 :root {
